--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.infosolution.dev.tfc">
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -11,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".business.Navigation">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,15 +31,14 @@
         <activity android:name=".user.UserRegisterActivity" />
         <activity android:name=".user.UserRegNext" />
         <activity android:name=".activities.ProductPageActivity" />
-        <!--
             <activity
-            android:name=".navigation.Navigation"
+            android:name=".business.Navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme"></activity>
-        -->
         <!-- <activity android:name=".activities.CommentsActivity"></activity> -->
         <!-- <activity android:name=".activities.CommentActivity"></activity> -->
-        <!--<activity android:name=".activities.BuyNowActivity"></activity>-->
+        <!-- <activity android:name=".activities.BuyNowActivity"></activity> -->
+        <activity android:name=".activities.ChangePasswordActivity"></activity>
     </application>
 
 </manifest>
