--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainActivity">
+        <activity android:name=".business.Navigation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -25,19 +25,21 @@
             </intent-filter>
         </activity>
         <activity android:name=".activities.LoginMailActivity" />
-        <activity android:name=".activities.SignupMailActivity" />
+        <activity android:name=".activities.SignupUserActivity" />
         <activity android:name=".business.LoginBusinessActivity" />
         <activity android:name=".business.SignupBusiActivity" />
-        <activity android:name=".user.UserRegisterActivity" />
+        <activity android:name=".user.UserRegActivity" />
         <activity android:name=".user.UserRegNext" />
         <activity android:name=".activities.ProductPageActivity" />
-            <activity
+        <!--    <activity
             android:name=".business.Navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme"></activity>
-        <!-- <activity android:name=".activities.CommentsActivity"></activity> -->
-        <!-- <activity android:name=".activities.CommentActivity"></activity> -->
-        <!-- <activity android:name=".activities.BuyNowActivity"></activity> -->
+       -->
+
+         <activity android:name=".activities.CommentsActivity"></activity>
+         <activity android:name=".activities.PostCommentActivity"></activity>
+         <activity android:name=".activities.BuyNowActivity"></activity>
         <activity android:name=".activities.ChangePasswordActivity"></activity>
     </application>
 
