--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".business.Navigation">
+        <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -31,11 +31,10 @@
         <activity android:name=".user.UserRegActivity" />
         <activity android:name=".user.UserRegNext" />
         <activity android:name=".activities.ProductPageActivity" />
-        <!--    <activity
+            <activity
             android:name=".business.Navigation"
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme"></activity>
-       -->
 
          <activity android:name=".activities.CommentsActivity"></activity>
          <activity android:name=".activities.PostCommentActivity"></activity>
