--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
 
     <application
         android:allowBackup="true"
@@ -42,6 +43,7 @@
         <activity
             android:name=".business.BusinessNavigation"
             android:label="@string/title_activity_business_navigation"
+            android:windowSoftInputMode="stateHidden"
             android:theme="@style/AppTheme"></activity>
     </application>
 
